--- a/template/desenho.html
+++ b/template/desenho.html
@@ -9,6 +9,8 @@
         
     </head>
     <body>
+        <input class="voltar" type="image" src="../static/images/voltar.png">
+
         <img class="maquina" src="../static/images/maquina.png">
         <img class="robo1" src="../static/images/robo1.png">
         <img class="gatorobo" src="../static/images/gatorobo.png">
@@ -61,8 +63,6 @@
             <button class="save">Salvar Desenho</button>
             <!-- <input type="range" id="maa" min="8" max="15"> -->
         </div>
-
-        
     </body >
     <script src="../static/js/desenho.js"></script>
 </html>
